refactor(basic 3.4): replace tag selectors with classes

--- a/index.html
+++ b/index.html
@@ -7,47 +7,45 @@
 </head>
 <body>
   <div class="aaa">
-    <img src="./eisenhower-matrix.jpg">
+    <img class="img" src="./eisenhower-matrix.jpg">
     <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
   <div class="centered-main-page-element">
-    <p id="topSectionForAddingElementToList">
-      <label for="new-task">Add Item</label>
-      <div class="task-row-wrapper">
-        <input id="new-task"class="task" type="text">
-        <button>Add</button>
-      </div>
-    </p>
-    <h3>Todo</h3>
-    <ul id="incompleteTasks">
-      <li>
-        <input type="checkbox">
-        <label class="task">Pay Bills</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
-          <img src="./remove.svg">
+    <label class="label" for="new-task">Add Item</label>
+    <div class="task-row-wrapper">
+      <input id="new-task"class="input task" type="text">
+      <button class="btn">Add</button>
+    </div>
+    <h3 class="subtitle">Todo</h3>
+    <ul class="list" id="incompleteTasks">
+      <li class="list-item">
+        <input type="checkbox" class="input">
+        <label class="label task">Pay Bills</label>
+        <input type="text" class="input task">
+        <button class="btn edit">Edit</button>
+        <button class="btn delete">
+          <img class="delete-img" src="./remove.svg">
         </button>
       </li>
-      <li class="editMode">
-        <input type="checkbox">
-        <label class="task">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task">
-        <button class="edit">Save</button>
-        <button class="delete">
-          <img src="./remove.svg">
+      <li class="list-item editMode">
+        <input type="checkbox" class="input">
+        <label class="label task">Go Shopping</label>
+        <input type="text" value="Go Shopping" class="input task">
+        <button class="btn edit">Save</button>
+        <button class="btn delete">
+          <img class="delete-img" src="./remove.svg">
         </button>
       </li>
     </ul>
-    <h3>Completed</h3>
-    <ul id="completed-tasks">
-      <li>
-        <input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
-          <img src="./remove.svg">
+    <h3 class="subtitle">Completed</h3>
+    <ul class="list" id="completed-tasks">
+      <li class="list-item">
+        <input type="checkbox" class="input" checked>
+        <label class="label task">See the Doctor</label>
+        <input type="text" class="input task">
+        <button class="btn edit">Edit</button>
+        <button class="btn delete">
+          <img class="delete-img" src="./remove.svg">
         </button>
       </li>
     </ul>
