--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 <body>
-  <div class="aaa">
+  <div class="header">
     <img class="img" src="./eisenhower-matrix.jpg">
     <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
-  <div class="centered-main-page-element">
+  <div class="main-page-element">
     <label class="label" for="new-task">Add Item</label>
     <div class="task-row-wrapper">
       <input id="new-task"class="input task" type="text">
