--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
   <div class="header">
     <img class="img" src="./eisenhower-matrix.jpg">
-    <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <a class="link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
-  <div class="main-page-element">
+  <div class="main">
     <label class="label" for="new-task">Add Item</label>
-    <div class="task-row-wrapper">
+    <div class="task-wrapper">
       <input id="new-task"class="input task" type="text">
       <button class="btn">Add</button>
     </div>
