fix(extended-1.2): add alt attribute to img

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="header">
-    <img class="img" src="./eisenhower-matrix.jpg">
+    <img class="img" src="./eisenhower-matrix.jpg" alt="eisenhower matrix">
     <a class="link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
   <div class="main">
@@ -24,7 +24,7 @@
         <input type="text" class="input task">
         <button class="btn edit">Edit</button>
         <button class="btn delete">
-          <img class="delete-img" src="./remove.svg">
+          <img class="delete-img" src="./remove.svg" alt="delete button">
         </button>
       </li>
       <li class="list-item editMode">
@@ -33,7 +33,7 @@
         <input type="text" value="Go Shopping" class="input task">
         <button class="btn edit">Save</button>
         <button class="btn delete">
-          <img class="delete-img" src="./remove.svg">
+          <img class="delete-img" src="./remove.svg" alt="delete button">
         </button>
       </li>
     </ul>
@@ -45,7 +45,7 @@
         <input type="text" class="input task">
         <button class="btn edit">Edit</button>
         <button class="btn delete">
-          <img class="delete-img" src="./remove.svg">
+          <img class="delete-img" src="./remove.svg" alt="delete button">
         </button>
       </li>
     </ul>
