refactor(extended-1.1): add semantic tags

--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 <body>
-  <div class="header">
+  <header class="header">
     <img class="img" src="./eisenhower-matrix.jpg" alt="eisenhower matrix">
     <a class="link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-  </div>
-  <div class="main">
+  </header>
+  <main class="main">
     <label class="label" for="new-task">Add Item</label>
     <div class="task-wrapper">
       <input id="new-task"class="input task" type="text">
       <button class="btn">Add</button>
     </div>
-    <h3 class="subtitle">Todo</h3>
+    <h2 class="subtitle">Todo</h2>
     <ul class="list" id="incompleteTasks">
       <li class="list-item">
         <input type="checkbox" class="input">
@@ -37,7 +37,7 @@
         </button>
       </li>
     </ul>
-    <h3 class="subtitle">Completed</h3>
+    <h2 class="subtitle">Completed</h2>
     <ul class="list" id="completed-tasks">
       <li class="list-item">
         <input type="checkbox" class="input" checked>
@@ -49,7 +49,7 @@
         </button>
       </li>
     </ul>
-  </div>
+  </main>
   <script src="app.js"></script>
 </body>
 </html>
