--- a/index.html
+++ b/index.html
@@ -7,45 +7,45 @@
 </head>
 <body>
   <header class="header">
-    <img class="img" src="./eisenhower-matrix.jpg" alt="eisenhower matrix">
-    <a class="link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <img class="header__img" src="./eisenhower-matrix.jpg" alt="eisenhower matrix">
+    <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main class="main">
-    <label class="label" for="new-task">Add Item</label>
+    <h3 class="subtitle">Add Item</h3>
     <div class="task-wrapper">
-      <input id="new-task"class="input task" type="text">
-      <button class="btn">Add</button>
+      <input id="new-task"class="task__input" type="text">
+      <button class="btn task__add">Add</button>
     </div>
     <h2 class="subtitle">Todo</h2>
-    <ul class="list" id="incompleteTasks">
-      <li class="list-item">
-        <input type="checkbox" class="input">
-        <label class="label task">Pay Bills</label>
-        <input type="text" class="input task">
-        <button class="btn edit">Edit</button>
-        <button class="btn delete">
-          <img class="delete-img" src="./remove.svg" alt="delete button">
+    <ul class="list" id="incomplete-tasks">
+      <li class="list__item">
+        <input type="checkbox" class="task__checkbox">
+        <label class="task__title">Pay Bills</label>
+        <input type="text" class="task__input task__input_edit">
+        <button class="btn task__edit">Edit</button>
+        <button class="btn task__delete">
+          <img class="task__delete__img" src="./remove.svg" alt="delete button">
         </button>
       </li>
-      <li class="list-item editMode">
-        <input type="checkbox" class="input">
-        <label class="label task">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="input task">
-        <button class="btn edit">Save</button>
-        <button class="btn delete">
-          <img class="delete-img" src="./remove.svg" alt="delete button">
+      <li class="list__item list__item_edit">
+        <input type="checkbox" class="task__checkbox">
+        <label class="task__title">Go Shopping</label>
+        <input type="text" value="Go Shopping" class="task__input task__input_edit">
+        <button class="btn task__edit">Save</button>
+        <button class="btn task__delete">
+          <img class="task__delete__img" src="./remove.svg" alt="delete button">
         </button>
       </li>
     </ul>
     <h2 class="subtitle">Completed</h2>
     <ul class="list" id="completed-tasks">
-      <li class="list-item">
-        <input type="checkbox" class="input" checked>
-        <label class="label task">See the Doctor</label>
-        <input type="text" class="input task">
-        <button class="btn edit">Edit</button>
-        <button class="btn delete">
-          <img class="delete-img" src="./remove.svg" alt="delete button">
+      <li class="list__item">
+        <input type="checkbox" class="task__checkbox" checked>
+        <label class="task__title">See the Doctor</label>
+        <input type="text" class="task__input task__input_edit">
+        <button class="btn task__edit">Edit</button>
+        <button class="btn task__delete">
+          <img class="task__delete__img" src="./remove.svg" alt="delete button">
         </button>
       </li>
     </ul>
