--- a/index.html
+++ b/index.html
@@ -7,13 +7,23 @@
 </head>
 <body>
   <header class="header">
-    <img class="header__img" src="./eisenhower-matrix.jpg" alt="eisenhower matrix">
-    <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <img 
+      class="header__img" 
+      src="./eisenhower-matrix.jpg" 
+      alt="eisenhower matrix"
+    >
+    <a class="header__link" 
+      href="https://goal-life.com/page/method/matrix-eisenhower"
+    >Want more details?</a>
   </header>
   <main class="main">
     <h3 class="subtitle">Add Item</h3>
     <div class="task-wrapper">
-      <input id="new-task"class="task__input" type="text">
+      <input 
+        id="new-task"
+        class="task__input" 
+        type="text"
+      >
       <button class="btn task__add">Add</button>
     </div>
     <h2 class="subtitle">Todo</h2>
@@ -24,16 +34,28 @@
         <input type="text" class="task__input task__input_edit">
         <button class="btn task__edit">Edit</button>
         <button class="btn task__delete">
-          <img class="task__delete__img" src="./remove.svg" alt="delete button">
+          <img 
+            class="task__delete__img" 
+            src="./remove.svg" 
+            alt="delete button"
+          >
         </button>
       </li>
       <li class="list__item list__item_edit">
         <input type="checkbox" class="task__checkbox">
         <label class="task__title">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task__input task__input_edit">
+        <input 
+          type="text" 
+          value="Go Shopping" 
+          class="task__input task__input_edit"
+        >
         <button class="btn task__edit">Save</button>
         <button class="btn task__delete">
-          <img class="task__delete__img" src="./remove.svg" alt="delete button">
+          <img 
+            class="task__delete__img" 
+            src="./remove.svg" 
+            alt="delete button"
+          >
         </button>
       </li>
     </ul>
@@ -45,7 +67,11 @@
         <input type="text" class="task__input task__input_edit">
         <button class="btn task__edit">Edit</button>
         <button class="btn task__delete">
-          <img class="task__delete__img" src="./remove.svg" alt="delete button">
+          <img 
+            class="task__delete__img" 
+            src="./remove.svg" 
+            alt="delete button"
+          >
         </button>
       </li>
     </ul>
